# fatherhood-is

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  SETUP_GOOGLE_OAUTH.md  SETUP_SUPABASE_STORAGE.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  render.yaml  spec.md  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/create/: page.tsx
app/redesign/: layout.tsx  page.tsx
backend/: .env.example  README.md  pyproject.toml  requirements.txt  run.py  system_prompt.md
backend/app/: __init__.py  config.py  main.py
backend/app/api/: comments.py  posts.py
backend/app/middleware/: __init__.py  rate_limiter.py
backend/app/models/: __init__.py  comment.py  post.py
backend/app/services/: __init__.py  db.py  image_generator.py  storage.py  supabase_storage.py
backend/app/utils/: __init__.py  validators.py
components/: AuthModal.tsx  Comments.tsx  CreatePostForm.tsx  ExampleTexts.tsx  Header.tsx  PostCard.tsx  PostGrid.tsx
components/redesign/: CreatePostFormEditorial.tsx  CreateSectionEditorial.tsx  HeaderEditorial.tsx  HeroEditorial.tsx  PostGridEditorial.tsx
design-variants/: README.md
design-variants/1-glassmorphism/: index.html
design-variants/2-neo-brutalism/: index.html
design-variants/3-minimalist/: index.html
design-variants/minimalist-variants/: README.md
lib/: api.ts
lib/auth/: AuthContext.tsx
lib/supabase/: client.ts  server.ts
supabase/: README.md
supabase/migrations/: 001_create_posts_table.sql  002_add_users_and_comments.sql  003_auto_create_user_profile.sql
types/: index.ts
(+11 files in other folders)
